resolve the problem of z-index

--- a/src/component/autoSuggest/autoSuggest.css
+++ b/src/component/autoSuggest/autoSuggest.css
@@ -26,10 +26,10 @@
     outline: none;
     position: absolute;
     box-sizing: border-box;
-    z-index: 97;
     &:focus-within {
         border: 1px solid rgba(11, 10, 10, 0.57);
         height: fit-content;
+        z-index: 98;
     }
 }
 
@@ -43,6 +43,7 @@
     height: fit-content;
     white-space: normal;
     word-break: break-all;
+    z-index: 98;
 }
 
 .auto-suggest {
@@ -62,7 +63,7 @@
     width: 100%;
     overflow-x: scroll;
     overflow-y: hidden;
-    z-index: 98;
+    z-index: 1;
 }
 
 .placeholder-editable-div {
